--- a/hawk/stackhawk.yml
+++ b/hawk/stackhawk.yml
@@ -1,4 +1,4 @@
 app:
-  applicationId: xxXXXXXX-xXXX-xxXX-XXxX-xXXxxXXXXxXX
-  host: http://example.com
+ # applicationId: xxXXXXXX-xXXX-xxXX-XXxX-xXXxxXXXXxXX
+ # host: http://example.com
   env: Development
