--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,4 +60,4 @@ jobs:
         with:
           apiKey: ${{ secrets.HAWK_API_KEY }}
           codeScanningAlerts: true
-#          githubToken: ${{ github.token }}
+          githubToken: ${{ github.token }}
